--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                   <div class="card-excerpt">
                     <p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000001" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000001" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -181,7 +181,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000002" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000002" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -204,7 +204,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000003" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000003" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -227,7 +227,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000004" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000004" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -255,7 +255,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000005" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000005" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -278,7 +278,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000006" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000006" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -301,7 +301,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000007" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000007" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -324,7 +324,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000008" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000008" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -352,7 +352,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000009" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000009" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -375,7 +375,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000010" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000010" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -398,7 +398,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000011" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000011" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -421,7 +421,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000012" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000012" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -450,7 +450,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000013" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000013" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -473,7 +473,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000014" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000014" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -496,7 +496,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000015" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000015" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
@@ -519,7 +519,7 @@
                   <!-- Description du jeu -->
                   <div class="card-excerpt"><p></p>
                   </div>
-                  <button class="Abutton add-to-basket" data-price="2" data-product-id="000000016" >Ajouter au panier !</button>
+                  <button class="Bbutton add-to-basket" data-price="2" data-product-id="000000016" >Ajouter au panier !</button>
                 </div>
                 <!-- Fin du corp -->
               </div>
