--- a/index.html
+++ b/index.html
@@ -576,6 +576,40 @@
           </div>
           <div class="modal-body">
             <p>Mes articles :</p>
+            <table class="d-none table">
+              <thead>
+              <tr>
+                <td>&nbsp;</td>
+                <td>Intitulé</td>
+                <td>Prix</td>
+                <td>Nombre</td>
+                <td>Supprimer</td>
+              </tr>
+              </thead>
+              <tbody>
+              <tr class="product-model d-none">
+                <td class="product-image" />
+                <td class="product-title" />
+                <td>
+                  <span class="product-price"></span> &euro;
+                </td>
+                <td class="product-input">
+                  <input class="product-amount" type="number" value="1" style="width:40px;" />
+                </td>
+                <td class="product-model">
+                  <button class="remove-from-basket">X</button>
+                </td>
+              </tr>
+              </tbody>
+              <tfoot>
+              <tr>
+                <td colspan="4">Total:</td>
+                <td>
+                  <span class="sum"></span> &euro;
+                </td>
+              </tr>
+              </tfoot>
+            </table>
           </div>
           <div class="modal-footer backcolor">
             <button type="button" class="btn btn-light" data-dismiss="modal">Fermer</button>
